[tool.poetry]
name = "erp"
version = "0.1.0"
description = ""
authors = ["Uncool <106897936+Uncool-dudes@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
flask = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
